Cards correctly formatted (wrap) on page

--- a/src/Styles/ProjectCards.scss
+++ b/src/Styles/ProjectCards.scss
@@ -7,18 +7,15 @@
     --buttonColorHover: #66878f;
 }
 .project-card-wrapper {
-    border: 2px solid aquamarine;
+    // border: 2px solid aquamarine;
 
 }
 .project-card-container {
     // border: 2px solid red;
-    width: 30%;
     height: 500px;
-    margin-top: 10px;
-    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 10px 20px 40px 20px;
 
     .project-card {
         // border: 2px solid aquamarine;
@@ -34,10 +31,11 @@
 
     .project-card-icon {
         // border: 2px solid red;
-        margin: 40px 0 20px 0;
+        margin: 20px 0 20px 0;
     }
 
     .project-card-title h3 { 
+        // border: 2px solid red;
         margin: 0 0 20px 0;
         color: var(--fontBlack);
         font-size: 1.5em;
@@ -95,4 +93,12 @@
             font-size: 1.08em;
         }
     }   
+}
+
+.project-card-main-collection {
+    // border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
 }
